--- a/Analysis_MetaMod_Markdown.Rmd
+++ b/Analysis_MetaMod_Markdown.Rmd
@@ -453,10 +453,10 @@ For the medium effects, all models except the inter model had sufficient power. 
 **ME.** 
 All methods were generally unbiased. For medium effects, only for a true effect size of 0.6 was there any noticeable difference, here the inter model underestimated the true effect. Under the small effects, both the add and inter models underestimated a null effect. 
 
-In terms of *SE?*, all of the methods preformed relatively equally except for the inter model. The inter model had a large standard error across all effect sizes. 
+In terms of 95 percentile range, all of the methods preformed relatively equally except for the inter model. The inter model had a large standard error across all effect sizes. 
 
 **RMSE.** 
-The obs and sel models had the lowest RMSE across all effect sizes. The add model preformed slightly worse when the null was true but not for effect sizes above 0.2. Overall, the inter model has the highest RMSE with the largest *SE* as well. 
+The obs and sel models had the lowest RMSE across all effect sizes. The add model preformed slightly worse when the null was true but not for effect sizes above 0.2. Overall, the inter model has the highest RMSE with the largest 95 percentile range as well. 
 
 
 **95% CI coverage.** 
@@ -471,7 +471,7 @@ The obs and sel models had the lowest RMSE across all effect sizes. The add mode
 **Power.** Across all effect sizes, all models except for the inter model preformed relatively equally with acceptable power (above 80%). Only under an effect size of 0.2 did the power drop for all models. Except for the inter model, the models had power of around 60% for an effect size of 0.2. Here, the add model appeared to have the most power. 
 
 **ME.** 
-Under the null, all methods performed poorly except the sel model which estimated the null correctly and had the smallest *SE*. The obs model overestimated the effect size to be around 0.25 and both the add and inter models underestimated the null effect. Once again the inter model had the largest *SE*.
+Under the null, all methods performed poorly except the sel model which estimated the null correctly and had the smallest 95 percentile range. The obs model overestimated the effect size to be around 0.25 and both the add and inter models underestimated the null effect. Once again the inter model had the largest 95 percentile range.
 
 For a medium effect of 0.3, all models under estimated the effect except for the inter model which overestimated the effect. For a medium effect of 0.6 the sel model preformed the best, only sightly underestimating the model. The obs and add model both underestimated the effect and the inter overestimated the effect. 
 
@@ -482,7 +482,7 @@ Under the null, the sel model had the lowest RSME followed by the add model and 
 
 Across all of the effect sizes the sel model had the lowest RMSE. The obs and add models steadily had increasing RMSE as the true effect increased. The inter model's RMSE slightly improved as the effect size increased relative to the add and obs models; however, the inter model was never as low as the sel. 
 
-In terms of *SE*, all models had relatively equal *SE* across effect sizes with the exception of the inter model which had very large *SE* across all effect sizes. 
+In terms of 95 percentile range, all models had relatively equal 95 percentile range across effect sizes with the exception of the inter model which had very large 95 percentile range across all effect sizes. 
 
 **95% CI coverage.** 
 
